--- a/website/.gitignore
+++ b/website/.gitignore
@@ -1,16 +1,1 @@
-node_modules
-.sass-cache
-package-lock.json
-
-# ignore file types
-*.zip
-*.psd
-*.ai
-
-# docs
-docs/_book
-docs/**/*.pdf
-docs/node_modules
-htdocs/__guideline/**/*.pdf
-
-webhook-current.log
+scripts
