--- a/website/package.json
+++ b/website/package.json
@@ -11,7 +11,12 @@
 	"license": "MIT",
 	"devDependencies": {
 		"babel-loader": "^8.1.0",
+		"css-loader": "^3.6.0",
+		"file-loader": "^6.0.0",
+		"monaco-editor-webpack-plugin": "^1.9.0",
+		"style-loader": "^1.2.1",
 		"ts-loader": "^8.0.1",
+		"ttf-loader": "^1.0.2",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0"
