--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"extends": "../tsconfig.json",
 	"compilerOptions": {
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"declaration": false
 	},
 	"include": ["./webpack.config.ts", "./src/**/*"],
 	"exclude": ["node_modules"]
