Changed a component to Svelte.

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -2,7 +2,8 @@
 	"extends": "../tsconfig.json",
 	"compilerOptions": {
 		"resolveJsonModule": true,
-		"declaration": false
+		"declaration": false,
+		"importHelpers": true
 	},
 	"include": ["./webpack.config.ts", "./src/**/*"],
 	"exclude": ["node_modules"]
