--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,8 @@
 		"file-loader": "^6.0.0",
 		"monaco-editor-webpack-plugin": "^1.9.0",
 		"style-loader": "^1.2.1",
+		"svelte-loader": "^2.13.6",
+		"svelte-preprocess": "^4.0.8",
 		"ts-loader": "^8.0.1",
 		"ttf-loader": "^1.0.2",
 		"webpack": "^4.43.0",
@@ -30,6 +32,8 @@
 		"@markuplint/ml-core": "^1.0.0-alpha.28",
 		"@markuplint/ml-spec": "^1.0.0-alpha.9",
 		"@markuplint/rules": "^1.0.0-alpha.40",
-		"monaco-editor": "^0.20.0"
+		"monaco-editor": "^0.20.0",
+		"svelte": "^3.24.0",
+		"tslib": "^2.0.0"
 	}
 }
