--- a/website/package.json
+++ b/website/package.json
@@ -4,56 +4,48 @@
 	"version": "1.0.0-alpha.44",
 	"private": true,
 	"scripts": {
-		"site:dev": "webpack-dev-server --progress --watch --colors",
-		"site:build": "webpack --mode production"
+		"site:dev": "node prebuild.js && next dev",
+		"site:build": "node prebuild.js && next build && next export -o ./dist",
+		"site:prebuild": "node prebuild.js"
 	},
 	"author": "Yusuke Hirao",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/mini-css-extract-plugin": "^0.9.1",
-		"@types/script-ext-html-webpack-plugin": "^2.1.1",
-		"@types/webpack-dev-server": "^3.11.0",
+		"@types/jest": "^26.0.9",
+		"@types/mdx-js__react": "^1.5.2",
+		"@types/node": "^13.11.0",
+		"@types/react": "^16.9.32",
 		"autoprefixer": "^9.8.6",
-		"babel-loader": "^8.1.0",
-		"css-loader": "^4.2.1",
 		"cssnano": "^4.1.10",
-		"fiber": "^1.0.4",
-		"file-loader": "^6.0.0",
-		"html-inline-css-webpack-plugin": "^1.8.1",
-		"html-loader": "^1.1.0",
-		"html-webpack-plugin": "^4.3.0",
-		"json-loader": "^0.5.7",
-		"mini-css-extract-plugin": "^0.10.0",
-		"monaco-editor-webpack-plugin": "^1.9.0",
+		"eslint-plugin-react": "^7.20.6",
+		"jest": "^26.3.0",
 		"postcss-base64": "^0.7.1",
 		"postcss-calc": "^7.0.3",
 		"postcss-custom-media": "^7.0.8",
 		"postcss-gap-properties": "^2.0.0",
 		"postcss-loader": "^3.0.0",
 		"postcss-math": "^0.0.10",
-		"sass": "^1.26.10",
-		"sass-loader": "^9.0.3",
-		"script-ext-html-webpack-plugin": "^2.1.4",
-		"style-loader": "^1.2.1",
-		"svelte-loader": "^2.13.6",
-		"svelte-preprocess": "^4.0.12",
-		"ts-loader": "^8.0.2",
-		"ttf-loader": "^1.0.2",
-		"webpack": "^4.44.1",
-		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.0"
+		"ts-jest": "^26.2.0",
+		"typescript": "^3.8.3",
+		"yaml-loader": "^0.6.0"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "^1.0.0-alpha.24",
-		"@markuplint/html-spec": "^1.0.0-alpha.27",
-		"@markuplint/i18n": "^1.0.0-alpha.10",
-		"@markuplint/ml-ast": "^1.0.0-alpha.14",
-		"@markuplint/ml-config": "^1.0.0-alpha.11",
-		"@markuplint/ml-core": "^1.0.0-alpha.31",
-		"@markuplint/ml-spec": "^1.0.0-alpha.11",
-		"@markuplint/rules": "^1.0.0-alpha.45",
-		"monaco-editor": "^0.20.0",
-		"svelte": "^3.24.1",
-		"tslib": "^2.0.1"
+		"@mapbox/rehype-prism": "^0.5.0",
+		"@mdx-js/runtime": "^1.6.16",
+		"@svgr/webpack": "^5.4.0",
+		"@types/js-yaml": "^3.12.5",
+		"date-fns": "^2.11.1",
+		"gray-matter": "^4.0.2",
+		"js-yaml": "^3.14.0",
+		"next": "9.5.1",
+		"next-mdx-enhanced": "^3.1.0",
+		"normalize.css": "^8.0.1",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-instagram-embed": "^1.5.0",
+		"react-schemaorg": "^1.2.0",
+		"react-twitter-embed": "^3.0.3",
+		"react-youtube": "^7.11.3",
+		"schema-dts": "^0.6.0"
 	}
 }
