--- a/website/package.json
+++ b/website/package.json
@@ -11,41 +11,40 @@
 	"author": "Yusuke Hirao",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/jest": "^26.0.9",
 		"@types/mdx-js__react": "^1.5.2",
-		"@types/node": "^13.11.0",
-		"@types/react": "^16.9.32",
+		"@types/node": "^14.10.1",
+		"@types/react": "^16.9.49",
+		"@zeit/next-css": "^1.0.1",
 		"autoprefixer": "^9.8.6",
 		"cssnano": "^4.1.10",
 		"eslint-plugin-react": "^7.20.6",
-		"jest": "^26.3.0",
+		"eslint-plugin-react-hooks": "^4.1.2",
+		"monaco-editor-webpack-plugin": "^1.9.0",
 		"postcss-base64": "^0.7.1",
-		"postcss-calc": "^7.0.3",
+		"postcss-calc": "^7.0.4",
 		"postcss-custom-media": "^7.0.8",
 		"postcss-gap-properties": "^2.0.0",
-		"postcss-loader": "^3.0.0",
+		"postcss-loader": "^4.0.1",
 		"postcss-math": "^0.0.10",
-		"ts-jest": "^26.2.0",
-		"typescript": "^3.8.3",
-		"yaml-loader": "^0.6.0"
+		"text-loader": "^0.0.1",
+		"url-loader": "^4.1.0"
 	},
 	"dependencies": {
 		"@mapbox/rehype-prism": "^0.5.0",
-		"@mdx-js/runtime": "^1.6.16",
-		"@svgr/webpack": "^5.4.0",
-		"@types/js-yaml": "^3.12.5",
-		"date-fns": "^2.11.1",
-		"gray-matter": "^4.0.2",
-		"js-yaml": "^3.14.0",
+		"@markuplint/html-parser": "^1.0.0-alpha.24",
+		"@markuplint/html-spec": "^1.0.0-alpha.27",
+		"@markuplint/i18n": "^1.0.0-alpha.10",
+		"@markuplint/ml-ast": "^1.0.0-alpha.14",
+		"@markuplint/ml-config": "^1.0.0-alpha.11",
+		"@markuplint/ml-core": "^1.0.0-alpha.31",
+		"@markuplint/ml-spec": "^1.0.0-alpha.11",
+		"@markuplint/rules": "^1.0.0-alpha.45",
+		"monaco-editor": "^0.20.0",
 		"next": "9.5.1",
 		"next-mdx-enhanced": "^3.1.0",
 		"normalize.css": "^8.0.1",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
-		"react-instagram-embed": "^1.5.0",
-		"react-schemaorg": "^1.2.0",
-		"react-twitter-embed": "^3.0.3",
-		"react-youtube": "^7.11.3",
-		"schema-dts": "^0.6.0"
+		"react-monaco-editor": "^0.40.0"
 	}
 }
