--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -1,7 +1,6 @@
 {
-	"extends": "../tsconfig.json",
 	"compilerOptions": {
-		"target": "es5",
+		"target": "ES2017",
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
 		"skipLibCheck": true,
