Added a playground site.

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
 	"workspaces": [
 		"packages/*",
 		"packages/@markuplint/*",
-		"website"
+		"website",
+		"playground"
 	],
 	"devDependencies": {
 		"@types/jest": "^26.0.5",
