--- a/website/package.json
+++ b/website/package.json
@@ -4,46 +4,33 @@
 	"version": "1.0.0-alpha.44",
 	"private": true,
 	"scripts": {
-		"site:dev": "webpack-dev-server --progress --watch --colors",
-		"site:build": "webpack --mode production"
+		"site:dev": "node prebuild.js && next dev",
+		"site:build": "node prebuild.js && next build && next export -o ./dist",
+		"site:prebuild": "node prebuild.js"
 	},
 	"author": "Yusuke Hirao",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/mini-css-extract-plugin": "^0.9.1",
-		"@types/script-ext-html-webpack-plugin": "^2.1.1",
-		"@types/webpack-dev-server": "^3.11.0",
+		"@types/mdx-js__react": "^1.5.2",
+		"@types/node": "^14.10.1",
+		"@types/react": "^16.9.49",
+		"@zeit/next-css": "^1.0.1",
 		"autoprefixer": "^9.8.6",
-		"babel-loader": "^8.1.0",
-		"css-loader": "^4.2.1",
 		"cssnano": "^4.1.10",
-		"fiber": "^1.0.4",
-		"file-loader": "^6.0.0",
-		"html-inline-css-webpack-plugin": "^1.8.1",
-		"html-loader": "^1.1.0",
-		"html-webpack-plugin": "^4.3.0",
-		"json-loader": "^0.5.7",
-		"mini-css-extract-plugin": "^0.10.0",
+		"eslint-plugin-react": "^7.20.6",
+		"eslint-plugin-react-hooks": "^4.1.2",
 		"monaco-editor-webpack-plugin": "^1.9.0",
 		"postcss-base64": "^0.7.1",
-		"postcss-calc": "^7.0.3",
+		"postcss-calc": "^7.0.4",
 		"postcss-custom-media": "^7.0.8",
 		"postcss-gap-properties": "^2.0.0",
-		"postcss-loader": "^3.0.0",
+		"postcss-loader": "^4.0.1",
 		"postcss-math": "^0.0.10",
-		"sass": "^1.26.10",
-		"sass-loader": "^9.0.3",
-		"script-ext-html-webpack-plugin": "^2.1.4",
-		"style-loader": "^1.2.1",
-		"svelte-loader": "^2.13.6",
-		"svelte-preprocess": "^4.0.12",
-		"ts-loader": "^8.0.2",
-		"ttf-loader": "^1.0.2",
-		"webpack": "^4.44.1",
-		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.0"
+		"text-loader": "^0.0.1",
+		"url-loader": "^4.1.0"
 	},
 	"dependencies": {
+		"@mapbox/rehype-prism": "^0.5.0",
 		"@markuplint/html-parser": "^1.0.0-alpha.24",
 		"@markuplint/html-spec": "^1.0.0-alpha.27",
 		"@markuplint/i18n": "^1.0.0-alpha.10",
@@ -53,7 +40,12 @@
 		"@markuplint/ml-spec": "^1.0.0-alpha.11",
 		"@markuplint/rules": "^1.0.0-alpha.45",
 		"monaco-editor": "^0.20.0",
-		"svelte": "^3.24.1",
-		"tslib": "^2.0.1"
+		"next": "9.5.1",
+		"next-mdx-enhanced": "^3.1.0",
+		"normalize.css": "^8.0.1",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-innertext": "^1.1.5",
+		"react-monaco-editor": "^0.40.0"
 	}
 }
