--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"cli": "./packages/markuplint/bin/markuplint",
 		"site:dev": "cd website; yarn site:dev",
 		"site:build": "cd website; yarn site:build",
+		"pg:dev": "cd playground; yarn pg:dev",
+		"pg:build": "cd playground; yarn pg:build",
 		"apidoc": "typedoc --ignoreCompilerErrors --exclude '**/*+(index|.spec|.e2e|.d).ts,node_modules/**/*' --mode file --out apidoc --media packages/markuplint/media --readme ./packages/markuplint/README.md ./packages/markuplint/",
 		"release": "lerna publish",
 		"prerelease": "yarn build; yarn test"
