--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/rules",
-	"version": "1.0.0-alpha.45",
+	"version": "1.0.0",
 	"description": "Rules for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -20,10 +20,10 @@
 		"@markuplint/ml-spec": "^1.0.0-alpha.11"
 	},
 	"devDependencies": {
-		"@markuplint/html-spec": "^1.0.0-alpha.27",
-		"@markuplint/ml-core": "^1.0.0-alpha.31",
-		"@markuplint/pug-parser": "^1.0.0-alpha.10",
-		"@markuplint/vue-parser": "^1.0.0-alpha.18",
-		"@markuplint/vue-spec": "^1.0.0-alpha.3"
+		"@markuplint/html-spec": "^1.0.0",
+		"@markuplint/ml-core": "^1.0.0",
+		"@markuplint/pug-parser": "^1.0.0-alpha.11",
+		"@markuplint/vue-parser": "^1.0.0-alpha.19",
+		"@markuplint/vue-spec": "^1.0.0-alpha.4"
 	}
 }
