--- a/website/package.json
+++ b/website/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@markuplint/website",
 	"description": "https://markuplint.dev",
-	"version": "1.0.0-alpha.44",
+	"version": "1.0.0",
 	"private": true,
 	"scripts": {
 		"site:dev": "node prebuild.js && next dev",
@@ -31,14 +31,14 @@
 	},
 	"dependencies": {
 		"@mapbox/rehype-prism": "^0.5.0",
-		"@markuplint/html-parser": "^1.0.0-alpha.24",
-		"@markuplint/html-spec": "^1.0.0-alpha.27",
-		"@markuplint/i18n": "^1.0.0-alpha.10",
-		"@markuplint/ml-ast": "^1.0.0-alpha.14",
-		"@markuplint/ml-config": "^1.0.0-alpha.11",
-		"@markuplint/ml-core": "^1.0.0-alpha.31",
+		"@markuplint/html-parser": "^1.0.0",
+		"@markuplint/html-spec": "^1.0.0",
+		"@markuplint/i18n": "^1.0.0",
+		"@markuplint/ml-ast": "^1.0.0",
+		"@markuplint/ml-config": "^1.0.0",
+		"@markuplint/ml-core": "^1.0.0",
 		"@markuplint/ml-spec": "^1.0.0-alpha.11",
-		"@markuplint/rules": "^1.0.0-alpha.45",
+		"@markuplint/rules": "^1.0.0",
 		"monaco-editor": "^0.20.0",
 		"next": "9.5.1",
 		"next-mdx-enhanced": "^3.1.0",
