--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/html-parser",
-	"version": "1.0.0-alpha.24",
+	"version": "1.0.0",
 	"description": "HTML parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -20,7 +20,7 @@
 		"@types/parse5": "^5.0.3"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "^1.0.0-alpha.14",
+		"@markuplint/ml-ast": "^1.0.0",
 		"parse5": "^6.0.0"
 	}
 }
