--- a/packages/@markuplint/vue-parser/package.json
+++ b/packages/@markuplint/vue-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/vue-parser",
-	"version": "1.0.0-alpha.18",
+	"version": "1.0.0-alpha.19",
 	"description": "Vue parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,8 +16,8 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "^1.0.0-alpha.24",
-		"@markuplint/ml-ast": "^1.0.0-alpha.14",
+		"@markuplint/html-parser": "^1.0.0",
+		"@markuplint/ml-ast": "^1.0.0",
 		"vue-eslint-parser": "^7.1.0"
 	}
 }
