--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "markuplint",
-	"version": "1.0.0-alpha.57",
+	"version": "1.0.0",
 	"description": "A Linter for All Markup Languages.",
 	"author": "Yusuke Hirao",
 	"license": "MIT",
@@ -24,15 +24,15 @@
 		"execa": "^4.0.3"
 	},
 	"dependencies": {
-		"@markuplint/file-resolver": "^1.0.0-alpha.20",
-		"@markuplint/html-parser": "^1.0.0-alpha.24",
-		"@markuplint/html-spec": "^1.0.0-alpha.27",
-		"@markuplint/i18n": "^1.0.0-alpha.10",
-		"@markuplint/ml-ast": "^1.0.0-alpha.14",
-		"@markuplint/ml-config": "^1.0.0-alpha.11",
-		"@markuplint/ml-core": "^1.0.0-alpha.31",
+		"@markuplint/file-resolver": "^1.0.0",
+		"@markuplint/html-parser": "^1.0.0",
+		"@markuplint/html-spec": "^1.0.0",
+		"@markuplint/i18n": "^1.0.0",
+		"@markuplint/ml-ast": "^1.0.0",
+		"@markuplint/ml-config": "^1.0.0",
+		"@markuplint/ml-core": "^1.0.0",
 		"@markuplint/ml-spec": "^1.0.0-alpha.11",
-		"@markuplint/rules": "^1.0.0-alpha.45",
+		"@markuplint/rules": "^1.0.0",
 		"cli-color": "^2.0.0",
 		"eastasianwidth": "^0.2.0",
 		"get-stdin": "^8.0.0",
