--- a/playground/package.json
+++ b/playground/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@markuplint/playground",
 	"description": "https://playground.markuplint.dev",
-	"version": "1.0.0-alpha.1",
+	"version": "1.0.0-alpha.2",
 	"private": true,
 	"scripts": {
 		"pg:dev": "webpack-dev-server --progress --watch --colors",
@@ -44,14 +44,14 @@
 		"webpack-dev-server": "^3.11.0"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "^1.0.0-alpha.24",
-		"@markuplint/html-spec": "^1.0.0-alpha.27",
-		"@markuplint/i18n": "^1.0.0-alpha.10",
-		"@markuplint/ml-ast": "^1.0.0-alpha.14",
-		"@markuplint/ml-config": "^1.0.0-alpha.11",
-		"@markuplint/ml-core": "^1.0.0-alpha.31",
+		"@markuplint/html-parser": "^1.0.0",
+		"@markuplint/html-spec": "^1.0.0",
+		"@markuplint/i18n": "^1.0.0",
+		"@markuplint/ml-ast": "^1.0.0",
+		"@markuplint/ml-config": "^1.0.0",
+		"@markuplint/ml-core": "^1.0.0",
 		"@markuplint/ml-spec": "^1.0.0-alpha.11",
-		"@markuplint/rules": "^1.0.0-alpha.45",
+		"@markuplint/rules": "^1.0.0",
 		"monaco-editor": "^0.20.0",
 		"svelte": "^3.24.1",
 		"tslib": "^2.0.1"
