--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ on:
 jobs:
     test:
         runs-on: ${{ matrix.os }}
+        strategy:
+            fail-fast: false
 
         strategy:
             matrix:
