ci: fix error when lerna run build with actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,9 @@ jobs:
 
         steps:
             - uses: actions/checkout@v2
+              with:
+                  # SEE: https://github.com/lerna/lerna/issues/2542
+                  fetch-depth: "0"
 
             - name: Get yarn cache directory path
               id: yarn-cache-dir-path
