--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,17 +27,13 @@ jobs:
                   # SEE: https://github.com/lerna/lerna/issues/2542
                   fetch-depth: "0"
 
-            - name: Get yarn cache directory path
-              id: yarn-cache-dir-path
-              run: echo "::set-output name=dir::$(yarn cache dir)"
-
             - uses: actions/cache@v2
               id: cache
               with:
-                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-                  restore-keys: |
-                      ${{ runner.os }}-yarn-
+                path: |
+                  node_modules
+                  */*/node_modules
+                key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
             - name: Use Node.js ${{ matrix.node }}
               uses: actions/setup-node@v1
