--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,8 @@ jobs:
                   node_modules
                   */*/node_modules
                 key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+                restore-keys: |
+                  ${{ runner.os }}-yarn-
 
             - name: Use Node.js ${{ matrix.node }}
               uses: actions/setup-node@v1
