--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/rules",
-	"version": "1.0.2",
+	"version": "1.1.0",
 	"description": "Rules for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -17,13 +17,13 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "^1.0.0-alpha.11"
+		"@markuplint/ml-spec": "^1.0.0"
 	},
 	"devDependencies": {
-		"@markuplint/html-spec": "^1.0.1",
-		"@markuplint/ml-core": "^1.0.1",
+		"@markuplint/html-spec": "^1.1.0",
+		"@markuplint/ml-core": "^1.1.0",
 		"@markuplint/pug-parser": "^1.0.0-alpha.12",
 		"@markuplint/vue-parser": "^1.0.0-alpha.20",
-		"@markuplint/vue-spec": "^1.0.0-alpha.4"
+		"@markuplint/vue-spec": "^1.0.0-alpha.5"
 	}
 }
