--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "markuplint",
-	"version": "1.1.0",
+	"version": "1.2.0",
 	"description": "A Linter for All Markup Languages.",
 	"author": "Yusuke Hirao",
 	"license": "MIT",
@@ -26,13 +26,13 @@
 	"dependencies": {
 		"@markuplint/file-resolver": "^1.0.0",
 		"@markuplint/html-parser": "^1.0.1",
-		"@markuplint/html-spec": "^1.0.1",
-		"@markuplint/i18n": "^1.0.0",
+		"@markuplint/html-spec": "^1.1.0",
+		"@markuplint/i18n": "^1.1.0",
 		"@markuplint/ml-ast": "^1.0.1",
 		"@markuplint/ml-config": "^1.0.0",
-		"@markuplint/ml-core": "^1.0.1",
-		"@markuplint/ml-spec": "^1.0.0-alpha.11",
-		"@markuplint/rules": "^1.0.2",
+		"@markuplint/ml-core": "^1.1.0",
+		"@markuplint/ml-spec": "^1.0.0",
+		"@markuplint/rules": "^1.1.0",
 		"cli-color": "^2.0.0",
 		"eastasianwidth": "^0.2.0",
 		"get-stdin": "^8.0.0",
