--- a/playground/package.json
+++ b/playground/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@markuplint/playground",
 	"description": "https://playground.markuplint.dev",
-	"version": "1.0.0-alpha.4",
+	"version": "1.0.0-alpha.5",
 	"private": true,
 	"scripts": {
 		"pg:dev": "webpack-dev-server --progress --watch --colors",
@@ -45,13 +45,13 @@
 	},
 	"dependencies": {
 		"@markuplint/html-parser": "^1.0.1",
-		"@markuplint/html-spec": "^1.0.1",
-		"@markuplint/i18n": "^1.0.0",
+		"@markuplint/html-spec": "^1.1.0",
+		"@markuplint/i18n": "^1.1.0",
 		"@markuplint/ml-ast": "^1.0.1",
 		"@markuplint/ml-config": "^1.0.0",
-		"@markuplint/ml-core": "^1.0.1",
-		"@markuplint/ml-spec": "^1.0.0-alpha.11",
-		"@markuplint/rules": "^1.0.2",
+		"@markuplint/ml-core": "^1.1.0",
+		"@markuplint/ml-spec": "^1.0.0",
+		"@markuplint/rules": "^1.1.0",
 		"monaco-editor": "^0.20.0",
 		"svelte": "^3.24.1",
 		"tslib": "^2.0.1"
