--- a/website/package.json
+++ b/website/package.json
@@ -11,23 +11,22 @@
 	"author": "Yusuke Hirao",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/mdx-js__react": "^1.5.2",
-		"@types/node": "^14.10.1",
-		"@types/react": "^16.9.49",
+		"@types/mdx-js__react": "^1.5.3",
+		"@types/node": "^14.14.8",
+		"@types/react": "^16.9.56",
 		"@zeit/next-css": "^1.0.1",
-		"autoprefixer": "^9.8.6",
+		"autoprefixer": "^10.0.2",
 		"cssnano": "^4.1.10",
-		"eslint-plugin-react": "^7.20.6",
-		"eslint-plugin-react-hooks": "^4.1.2",
-		"monaco-editor-webpack-plugin": "^1.9.0",
+		"eslint-plugin-react": "^7.21.5",
+		"eslint-plugin-react-hooks": "^4.2.0",
 		"postcss-base64": "^0.7.1",
-		"postcss-calc": "^7.0.4",
+		"postcss-calc": "^7.0.5",
 		"postcss-custom-media": "^7.0.8",
 		"postcss-gap-properties": "^2.0.0",
-		"postcss-loader": "^4.0.1",
+		"postcss-loader": "^4.0.4",
 		"postcss-math": "^0.0.10",
 		"text-loader": "^0.0.1",
-		"url-loader": "^4.1.0"
+		"url-loader": "^4.1.1"
 	},
 	"dependencies": {
 		"@mapbox/rehype-prism": "^0.5.0",
@@ -39,13 +38,11 @@
 		"@markuplint/ml-core": "^1.1.0",
 		"@markuplint/ml-spec": "^1.0.0",
 		"@markuplint/rules": "^1.1.0",
-		"monaco-editor": "^0.20.0",
-		"next": "9.5.1",
-		"next-mdx-enhanced": "^3.1.0",
+		"next": "10.0.1",
+		"next-mdx-enhanced": "^5.0.0",
 		"normalize.css": "^8.0.1",
-		"react": "16.13.1",
-		"react-dom": "16.13.1",
-		"react-innertext": "^1.1.5",
-		"react-monaco-editor": "^0.40.0"
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"react-innertext": "^1.1.5"
 	}
 }
