--- a/test/fixture/vue/.markuplintrc
+++ b/test/fixture/vue/.markuplintrc
@@ -24,6 +24,7 @@
 		"attr-value-quotes": true,
 		"case-sensitive-attr-name": true,
 		"case-sensitive-tag-name": true,
-		"indentation": "tab"
+		"indentation": "tab",
+		"wai-aria": true
 	}
 }
