--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,17 +25,17 @@ jobs:
             - uses: actions/checkout@v2
               with:
                   # SEE: https://github.com/lerna/lerna/issues/2542
-                  fetch-depth: "0"
+                  fetch-depth: '0'
 
             - uses: actions/cache@v2
               id: cache
               with:
-                path: |
-                  node_modules
-                  **/node_modules
-                key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
-                restore-keys: |
-                  ${{ runner.os }}-yarn-
+                  path: |
+                      node_modules
+                      **/node_modules
+                  key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-yarn-
 
             - name: Use Node.js ${{ matrix.node }}
               uses: actions/setup-node@v1
@@ -45,6 +45,9 @@ jobs:
             - name: Install dependencies
               if: steps.cache.outputs.cache-hit != 'true'
               run: yarn install
+
+            - name: Bootstrap
+              run: yarn bootstrap
 
             - name: Build
               run: yarn build
