Move utility functions for the parser from "ml-ast" to "parser-utils".

--- a/packages/@markuplint/parser-utils/package.json
+++ b/packages/@markuplint/parser-utils/package.json
@@ -14,5 +14,12 @@
 	"scripts": {
 		"build": "tsc",
 		"clean": "tsc --build --clean"
+	},
+	"devDependencies": {
+		"@markuplint/ml-ast": "^1.2.0",
+		"@types/uuid": "^8.3.0"
+	},
+	"dependencies": {
+		"uuid": "^8.3.2"
 	}
 }
