--- a/packages/@markuplint/vue-parser/package.json
+++ b/packages/@markuplint/vue-parser/package.json
@@ -18,6 +18,10 @@
 	"dependencies": {
 		"@markuplint/html-parser": "^1.2.0",
 		"@markuplint/ml-ast": "^1.2.0",
+		"@markuplint/parser-utils": "^1.1.0",
 		"vue-eslint-parser": "^7.4.1"
+	},
+	"devDependencies": {
+		"@markuplint/parser-utils": "^1.1.0"
 	}
 }
