--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/rules",
-	"version": "1.3.1",
+	"version": "1.4.0",
 	"description": "Rules for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -17,13 +17,13 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "^1.2.0"
+		"@markuplint/ml-spec": "^1.3.0"
 	},
 	"devDependencies": {
-		"@markuplint/html-spec": "^1.4.0",
-		"@markuplint/ml-core": "^1.3.0",
-		"@markuplint/pug-parser": "^1.0.0-alpha.15",
-		"@markuplint/vue-parser": "^1.0.0-alpha.22",
-		"@markuplint/vue-spec": "^1.0.0-alpha.7"
+		"@markuplint/html-spec": "^1.4.1",
+		"@markuplint/ml-core": "^1.4.0",
+		"@markuplint/pug-parser": "^1.0.0-beta.0",
+		"@markuplint/vue-parser": "^1.0.0-beta.0",
+		"@markuplint/vue-spec": "^1.0.0-beta.0"
 	}
 }
