--- a/packages/@markuplint/svelte-parser/package.json
+++ b/packages/@markuplint/svelte-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/svelte-parser",
-	"version": "1.0.0-alpha.6",
+	"version": "1.0.0-beta.0",
 	"description": "Svelte parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,11 +16,11 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "^1.2.0",
-		"@markuplint/ml-ast": "^1.2.0",
+		"@markuplint/html-parser": "^1.3.0",
+		"@markuplint/ml-ast": "^1.3.0",
 		"svelte": "^3.32.1"
 	},
 	"devDependencies": {
-		"@markuplint/parser-utils": "^1.1.0"
+		"@markuplint/parser-utils": "^1.2.0"
 	}
 }
