--- a/test/fixture/.markuplintrc
+++ b/test/fixture/.markuplintrc
@@ -64,5 +64,14 @@
 				}
 			}
 		}
+	],
+	"childNodeRules": [
+		{
+			"selector": ".ignore",
+			"inheritance": true,
+			"rules": {
+				"wai-aria": false
+			}
+		}
 	]
 }
