--- a/packages/markuplint/tsconfig.json
+++ b/packages/markuplint/tsconfig.json
@@ -32,5 +32,5 @@
 		}
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
+	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts", "./src/test-utils.ts"]
 }
