--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -20,6 +20,7 @@
 	},
 	"devDependencies": {
 		"@types/cli-color": "^2.0.0",
+		"@types/has-yarn": "^1.0.1",
 		"@types/meow": "^5.0.0",
 		"execa": "^5.0.0"
 	},
@@ -34,8 +35,10 @@
 		"@markuplint/ml-spec": "^1.3.0",
 		"@markuplint/rules": "^1.4.1",
 		"cli-color": "^2.0.0",
+		"detect-installed": "^2.0.4",
 		"eastasianwidth": "^0.2.0",
 		"enquirer": "^2.3.6",
+		"has-yarn": "^2.1.0",
 		"get-stdin": "^8.0.0",
 		"meow": "^9.0.0",
 		"os-locale": "^5.0.0",
