--- a/packages/@markuplint/rule-textlint/package.json
+++ b/packages/@markuplint/rule-textlint/package.json
@@ -23,6 +23,7 @@
 	"dependencies": {
 		"@markuplint/ml-core": "^1.7.1",
 		"@textlint/kernel": "^3.4.1",
+		"textlint": "^11.9.0",
 		"textlint-plugin-html": "^0.2.0"
 	}
 }
