--- a/packages/@markuplint/vue-parser/package.json
+++ b/packages/@markuplint/vue-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/vue-parser",
-	"version": "1.0.0-beta.1",
+	"version": "1.0.0",
 	"description": "Vue parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,9 +16,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "^1.3.1",
-		"@markuplint/ml-ast": "^1.3.0",
-		"@markuplint/parser-utils": "^1.2.1",
+		"@markuplint/html-parser": "^1.4.0",
+		"@markuplint/ml-ast": "^1.4.0",
+		"@markuplint/parser-utils": "^1.3.0",
 		"vue-eslint-parser": "^7.4.1"
 	},
 	"devDependencies": {
