Update the config for the website.

--- a/website/.markuplintrc
+++ b/website/.markuplintrc
@@ -1,4 +1,7 @@
 {
+	"parser": {
+		".tsx$": "@markuplint/jsx-parser"
+	},
 	"rules": {
 		"attr-duplication": true,
 		"character-reference": true,
@@ -11,32 +14,14 @@
 		"invalid-attr": true,
 		"landmark-roles": true,
 		"required-h1": true,
-		"class-naming": "/[a-z]+/",
+		"class-naming": false,
 		"attr-equal-space-after": true,
 		"attr-equal-space-before": true,
 		"attr-spacing": true,
 		"attr-value-quotes": true,
 		"case-sensitive-attr-name": true,
 		"case-sensitive-tag-name": true,
-		"indentation": false
-	},
-	"nodeRules": [
-		{
-			"tagName": "meta",
-			"rules": {
-				"invalid-attr": {
-					"option": {
-						"attrs": {
-							"property": {
-								"type": "String"
-							},
-							"content": {
-								"type": "String"
-							}
-						}
-					}
-				}
-			}
-		}
-	]
+		"indentation": false,
+		"wai-aria": true
+	}
 }
