Add a rule to the config of the website.

--- a/website/.markuplintrc
+++ b/website/.markuplintrc
@@ -23,5 +23,21 @@
 		"case-sensitive-tag-name": true,
 		"indentation": false,
 		"wai-aria": true
-	}
+	},
+	"nodeRules": [
+		{
+			"tagName": "style",
+			"rules": {
+				"invalid-attr": {
+					"option": {
+						"attrs": {
+							"jsx": {
+								"type": "Boolean"
+							}
+						}
+					}
+				}
+			}
+		}
+	]
 }
