--- a/packages/@markuplint/jsx-parser/package.json
+++ b/packages/@markuplint/jsx-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/jsx-parser",
-	"version": "0.2.0",
+	"version": "0.2.1-beta.0",
 	"description": "JSX parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,9 +16,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "^1.4.0",
-		"@markuplint/ml-ast": "^1.4.0",
-		"@markuplint/parser-utils": "^1.3.0",
+		"@markuplint/html-parser": "^1.4.1",
+		"@markuplint/ml-ast": "^1.4.1",
+		"@markuplint/parser-utils": "^1.3.1",
 		"@typescript-eslint/types": "^4.22.0",
 		"@typescript-eslint/typescript-estree": "^4.22.0"
 	},
