--- a/packages/@markuplint/rule-textlint/package.json
+++ b/packages/@markuplint/rule-textlint/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/rule-textlint",
-	"version": "0.1.0",
+	"version": "0.1.1-alpha.0",
 	"description": "The textlint rule for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -17,11 +17,11 @@
 		"clean": "tsc --build --clean"
 	},
 	"devDependencies": {
-		"markuplint": "^1.7.0",
+		"markuplint": "^1.7.1",
 		"textlint-rule-prh": "^5.3.0"
 	},
 	"dependencies": {
-		"@markuplint/ml-core": "^1.5.0",
+		"@markuplint/ml-core": "^1.5.1",
 		"@textlint/kernel": "^3.4.1",
 		"textlint-plugin-html": "^0.2.0"
 	}
