Tidy up tsconfig.
___

--- a/packages/@markuplint/rules/tsconfig.json
+++ b/packages/@markuplint/rules/tsconfig.json
@@ -17,10 +17,7 @@
 			"path": "../ml-spec"
 		},
 		{
-			"path": "../pug-parser"
-		},
-		{
-			"path": "../vue-parser"
+			"path": "../html-spec"
 		}
 	],
 	"include": ["./src/**/*"],
