--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -17,10 +17,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "^1.4.1"
-	},
-	"devDependencies": {
 		"@markuplint/html-spec": "^1.5.1",
+		"@markuplint/ml-spec": "^1.4.1",
 		"@markuplint/ml-core": "^1.5.1"
-	}
+	},
+	"devDependencies": {}
 }
