--- a/packages/@markuplint/rule-textlint/package.json
+++ b/packages/@markuplint/rule-textlint/package.json
@@ -16,6 +16,9 @@
 		"dev": "tsc --build --watch",
 		"clean": "tsc --build --clean"
 	},
+	"optionalDependencies": {
+		"textlint": "^11.9.1"
+	},
 	"devDependencies": {
 		"markuplint": "^1.9.1",
 		"textlint-rule-prh": "^5.3.0"
@@ -23,7 +26,6 @@
 	"dependencies": {
 		"@markuplint/ml-core": "^1.7.1",
 		"@textlint/kernel": "^3.4.1",
-		"textlint": "^11.9.0",
 		"textlint-plugin-html": "^0.2.0"
 	}
 }
