--- a/package.json
+++ b/package.json
@@ -37,10 +37,7 @@
 	},
 	"jest": {
 		"verbose": true,
-		"transform": {
-			"^.+\\.tsx?$": "ts-jest"
-		},
-		"testRegex": "(\\.|/)(test|spec)\\.tsx?$",
+		"testRegex": "(\\.|/)(spec|test)\\.tsx?$",
 		"moduleFileExtensions": [
 			"ts",
 			"tsx",
@@ -51,7 +48,32 @@
 		],
 		"collectCoverageFrom": [
 			"packages/markuplint/src/**/*.ts",
-			"packages/@markuplint/*/src/**/*.ts"
+			"packages/@markuplint/*/src/**/*.ts",
+			"!**/*.spec.ts?(x)",
+			"!**/*.test.ts?(x)"
+		],
+		"projects": [
+			{
+				"displayName": "node",
+				"testPathIgnorePatterns": [
+					"(\\.|/)browser\\.(spec|test)\\.tsx?$"
+				],
+				"testEnvironment": "node",
+				"transform": {
+					"^.+\\.tsx?$": "ts-jest"
+				}
+			},
+			{
+				"displayName": "browser",
+				"testRegex": "(\\.|/)browser\\.(spec|test)\\.tsx?$",
+				"resolver": "<rootDir>/test/browser-resolver.js",
+				"setupFiles": [
+					"<rootDir>/test/browser-setup.js"
+				],
+				"transform": {
+					"^.+\\.tsx?$": "ts-jest"
+				}
+			}
 		]
 	},
 	"workspaces": [
@@ -64,6 +86,7 @@
 		"@types/jest": "^26.0.20",
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
 		"@typescript-eslint/parser": "^4.14.1",
+		"browser-resolve": "^2.0.0",
 		"coveralls": "^3.1.0",
 		"eslint": "^7.18.0",
 		"eslint-plugin-eslint-comments": "^3.2.0",
