--- a/packages/@markuplint/rule-textlint/package.json
+++ b/packages/@markuplint/rule-textlint/package.json
@@ -8,6 +8,9 @@
 	"private": false,
 	"main": "lib/index.js",
 	"types": "lib/index.d.ts",
+	"browser": {
+		"./lib/verify.js": "./lib/verify-browser.js"
+	},
 	"publishConfig": {
 		"access": "public"
 	},
@@ -16,9 +19,6 @@
 		"dev": "tsc --build --watch",
 		"clean": "tsc --build --clean"
 	},
-	"optionalDependencies": {
-		"textlint": "^11.9.1"
-	},
 	"devDependencies": {
 		"markuplint": "^1.9.1",
 		"textlint-rule-prh": "^5.3.0"
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@markuplint/ml-core": "^1.7.1",
 		"@textlint/kernel": "^3.4.1",
+		"textlint": "^11.9.1",
 		"textlint-plugin-html": "^0.2.0"
 	}
 }
