--- a/website/package.json
+++ b/website/package.json
@@ -12,30 +12,32 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/mdx-js__react": "^1.5.3",
-		"@types/node": "^14.14.28",
-		"@types/react": "^17.0.2",
+		"@types/node": "^15.12.4",
+		"@types/react": "^17.0.11",
 		"@zeit/next-css": "^1.0.1",
-		"autoprefixer": "^10.2.4",
-		"cssnano": "^4.1.10",
-		"eslint-plugin-react": "^7.22.0",
+		"autoprefixer": "^10.2.6",
+		"cssnano": "^5.0.6",
+		"eslint-config-next": "^11.0.0",
+		"eslint-plugin-react": "^7.24.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
+		"postcss": "^8.3.5",
 		"postcss-base64": "^0.7.1",
 		"postcss-calc": "^8.0.0",
 		"postcss-custom-media": "^8.0.0",
 		"postcss-gap-properties": "^2.0.0",
-		"postcss-loader": "^5.0.0",
+		"postcss-loader": "^6.1.0",
 		"postcss-math": "^0.0.10",
 		"text-loader": "^0.0.1",
 		"url-loader": "^4.1.1"
 	},
 	"dependencies": {
-		"@mapbox/rehype-prism": "^0.5.0",
+		"@mapbox/rehype-prism": "^0.6.0",
 		"@markuplint/rules": "^1.8.1",
-		"next": "10.0.6",
+		"next": "11.0.0",
 		"next-mdx-enhanced": "^5.0.0",
 		"normalize.css": "^8.0.1",
-		"react": "17.0.1",
-		"react-dom": "17.0.1",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
 		"react-innertext": "^1.1.5"
 	}
 }
