--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"@markuplint/ml-ast": "^1.5.1",
 		"@markuplint/parser-utils": "^1.4.1",
-		"parse5": "^6.0.1"
+		"parse5": "^6.0.1",
+		"tslib": "^2.3.0"
 	}
 }
