--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -17,8 +17,10 @@
 		"clean": "tsc --build --clean",
 		"schema": "json2ts ./schemas/permitted-structures.schema.json > ./src/permitted-structres.ts; prettier --write ./src/permitted-structres.ts; eslint --fix --config ../../../.eslintrc ./src/permitted-structres.ts"
 	},
+	"dependencies": {
+		"tslib": "^2.3.0"
+	},
 	"devDependencies": {
-		"json-schema-to-typescript": "^10.1.3",
-		"typescript-json-schema": "^0.48.0"
+		"json-schema-to-typescript": "^10.1.3"
 	}
 }
