--- a/packages/@markuplint/mustache-parser/package.json
+++ b/packages/@markuplint/mustache-parser/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@markuplint/html-parser": "^1.5.1",
 		"@markuplint/ml-ast": "^1.5.1",
-		"@markuplint/parser-utils": "^1.4.1"
+		"@markuplint/parser-utils": "^1.4.1",
+		"tslib": "^2.3.0"
 	}
 }
