--- a/packages/@markuplint/pug-parser/package.json
+++ b/packages/@markuplint/pug-parser/package.json
@@ -20,6 +20,7 @@
 		"@markuplint/ml-ast": "^1.5.1",
 		"@markuplint/parser-utils": "^1.4.1",
 		"pug-lexer": "^5.0.0",
-		"pug-parser": "^6.0.0"
+		"pug-parser": "^6.0.0",
+		"tslib": "^2.3.0"
 	}
 }
