--- a/packages/@markuplint/rule-textlint/package.json
+++ b/packages/@markuplint/rule-textlint/package.json
@@ -27,6 +27,7 @@
 		"@markuplint/ml-core": "^1.7.1",
 		"@textlint/kernel": "^3.4.1",
 		"textlint": "^11.9.1",
-		"textlint-plugin-html": "^0.2.0"
+		"textlint-plugin-html": "^0.2.0",
+		"tslib": "^2.3.0"
 	}
 }
