--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"@markuplint/html-spec": "^1.6.1",
 		"@markuplint/ml-core": "^1.7.1",
-		"@markuplint/ml-spec": "^1.5.0"
+		"@markuplint/ml-spec": "^1.5.0",
+		"tslib": "^2.3.0"
 	}
 }
