--- a/packages/@markuplint/svelte-parser/package.json
+++ b/packages/@markuplint/svelte-parser/package.json
@@ -18,9 +18,8 @@
 	"dependencies": {
 		"@markuplint/html-parser": "^1.5.1",
 		"@markuplint/ml-ast": "^1.5.1",
-		"svelte": "^3.38.2"
-	},
-	"devDependencies": {
-		"@markuplint/parser-utils": "^1.4.1"
+		"@markuplint/parser-utils": "^1.4.1",
+		"svelte": "^3.38.2",
+		"tslib": "^2.3.0"
 	}
 }
