--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -40,6 +40,7 @@
 		"has-yarn": "^2.1.0",
 		"meow": "^9.0.0",
 		"os-locale": "^5.0.0",
-		"strip-ansi": "^6.0.0"
+		"strip-ansi": "^6.0.0",
+		"tslib": "^2.3.0"
 	}
 }
