--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"lint": "prettier --write .; eslint . --fix; yarn cli './website/**/*.tsx'",
 		"schema": "yarn workspace @markuplint/ml-spec schema",
 		"gen": "yarn workspace @markuplint/html-spec gen",
-		"all": "yarn clean; yarn build; yarn lint; yarn gen; yarn schema; yarn test:clear; yarn test;",
+		"all": "yarn clean; yarn build; yarn lint; yarn gen; yarn schema; yarn test:clear; yarn test",
 		"cli": "./packages/markuplint/bin/markuplint",
 		"site:dev": "yarn workspace @markuplint/website dev",
 		"site:build": "yarn workspace @markuplint/website build",
@@ -41,7 +41,7 @@
 		"playground"
 	],
 	"devDependencies": {
-		"@types/cheerio": "^0.22.24",
+		"@types/cheerio": "^0.22.29",
 		"@types/cli-color": "^2.0.0",
 		"@types/cli-progress": "^3.9.0",
 		"@types/cosmiconfig": "^6.0.0",
@@ -49,78 +49,73 @@
 		"@types/has-yarn": "^1.0.1",
 		"@types/jest": "^26.0.23",
 		"@types/mdx-js__react": "^1.5.3",
-		"@types/meow": "^5.0.0",
-		"@types/mini-css-extract-plugin": "^0.9.1",
-		"@types/node": "^14.14.22",
+		"@types/meow": "^6.0.0",
+		"@types/mini-css-extract-plugin": "^1.4.3",
+		"@types/node": "^15.12.5",
 		"@types/node-fetch": "^2.5.8",
 		"@types/parse5": "^6.0.0",
 		"@types/react": "^17.0.11",
 		"@types/script-ext-html-webpack-plugin": "^2.1.1",
 		"@types/uuid": "^8.3.0",
 		"@types/webpack-dev-server": "^3.11.0",
-		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/eslint-plugin": "^4.28.0",
 		"@typescript-eslint/parser": "^4.14.1",
 		"@zeit/next-css": "^1.0.1",
-		"autoprefixer": "^9.8.6",
+		"autoprefixer": "^10.2.6",
 		"babel-loader": "^8.2.2",
 		"browser-resolve": "^2.0.0",
-		"cheerio": "^1.0.0-rc.5",
+		"cheerio": "^1.0.0-rc.10",
 		"cli-progress": "^3.9.0",
 		"coveralls": "^3.1.0",
-		"css-loader": "^4.2.1",
-		"cssnano": "^4.1.10",
-		"eslint": "^7.18.0",
-		"eslint-config-next": "^11.0.0",
+		"css-loader": "^5.2.6",
+		"cssnano": "^5.0.6",
+		"eslint": "^7.29.0",
+		"eslint-config-next": "^11.0.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-jsdoc": "^31.4.0",
+		"eslint-plugin-jsdoc": "^35.4.0",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-react": "^7.24.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
-		"execa": "^5.0.0",
+		"execa": "^5.1.1",
 		"fast-xml-parser": "^3.18.0",
-		"fiber": "^1.0.4",
-		"file-loader": "^6.0.0",
 		"heapdump": "^0.3.15",
 		"html-inline-css-webpack-plugin": "^1.11.1",
-		"html-loader": "^1.1.0",
-		"html-webpack-plugin": "^4.3.0",
+		"html-loader": "^2.1.2",
+		"html-webpack-plugin": "^5.3.2",
 		"husky": "^6.0.0",
 		"jest": "^27.0.5",
 		"json-loader": "^0.5.7",
 		"json-schema-to-typescript": "^10.1.4",
 		"lerna": "^4.0.0",
 		"lint-staged": "^11.0.0",
-		"mini-css-extract-plugin": "^0.10.0",
-		"monaco-editor-webpack-plugin": "^1.9.0",
+		"mini-css-extract-plugin": "^1.6.1",
+		"monaco-editor-webpack-plugin": "^4.0.0",
 		"node-fetch": "^2.6.1",
 		"normalize-package-data": "^3.0.2",
 		"postcss": "^8.3.5",
 		"postcss-base64": "^0.7.1",
-		"postcss-calc": "^7.0.3",
-		"postcss-custom-media": "^7.0.8",
+		"postcss-calc": "^8.0.0",
+		"postcss-custom-media": "^8.0.0",
 		"postcss-gap-properties": "^2.0.0",
-		"postcss-loader": "^3.0.0",
+		"postcss-loader": "^6.1.0",
 		"postcss-math": "^0.0.10",
-		"prettier": "^2.2.1",
+		"prettier": "^2.3.2",
 		"sass": "^1.35.1",
-		"sass-loader": "^9.0.3",
+		"sass-loader": "^12.1.0",
 		"script-ext-html-webpack-plugin": "^2.1.4",
-		"style-loader": "^1.2.1",
+		"style-loader": "^3.0.0",
 		"svelte-loader": "^3.1.2",
 		"svelte-preprocess": "^4.0.12",
-		"text-loader": "^0.0.1",
 		"textlint-rule-prh": "^5.3.0",
 		"ts-jest": "^27.0.3",
-		"ts-loader": "^8.0.2",
+		"ts-loader": "^9.2.3",
 		"ts-node": "^10.0.0",
-		"ttf-loader": "^1.0.2",
 		"typedoc": "^0.19.2",
 		"typescript": "^4.3.4",
-		"url-loader": "^4.1.1",
 		"uuid": "^8.3.2",
-		"webpack": "^4.44.1",
-		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.0",
+		"webpack": "^5.40.0",
+		"webpack-cli": "^4.7.2",
+		"webpack-dev-server": "^4.0.0-beta.3",
 		"yarn-deduplicate": "^3.1.0"
 	}
 }
