--- a/website/package.json
+++ b/website/package.json
@@ -13,11 +13,11 @@
 	"dependencies": {
 		"@mapbox/rehype-prism": "^0.6.0",
 		"@markuplint/rules": "^1.8.1",
-		"next": "11.0.0",
+		"next": "^11.0.1",
 		"next-mdx-enhanced": "^5.0.0",
 		"normalize.css": "^8.0.1",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"react-innertext": "^1.1.5"
 	}
 }
