--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"test:clear": "jest --clearCache",
 		"test:unit": "jest",
 		"test:heapdump": "node --expose-gc ./heaptest/index.js",
-		"lint": "prettier --write './{packages,website,playground}/**/*.{ts,tsx,json}'; eslint --fix './{packages,website,playground}/**/*.{ts,tsx}'; yarn cli './website/**/*.tsx'",
+		"lint": "prettier --write './{packages,website,playground}/**/*.{ts,tsx,json}'; eslint --fix './{packages,website,playground}/**/*.{ts,tsx}'; yarn cli './{website,playground}/**/*.tsx'",
 		"schema": "lerna run schema",
 		"gen": "cd packages/\\@markuplint/html-spec/; yarn gen; cd ../",
 		"all": "yarn lint; yarn clean; yarn gen; yarn build; yarn schema; yarn test:clear; yarn test;",
@@ -31,7 +31,7 @@
 		"./{packages,website,playground}/**/*.{ts,tsx}": [
 			"eslint --fix"
 		],
-		"./test/**/*.{pug,html}": [
+		"./{website,playground}/**/*.tsx": [
 			"yarn cli"
 		]
 	},
