--- a/playground/package.json
+++ b/playground/package.json
@@ -3,58 +3,52 @@
 	"description": "https://playground.markuplint.dev",
 	"version": "1.0.1-alpha.6",
 	"private": true,
-	"scripts": {
-		"pg:dev": "webpack-dev-server --progress --watch --colors",
-		"pg:build": "webpack --mode production"
-	},
-	"author": "Yusuke Hirao",
-	"license": "MIT",
-	"devDependencies": {
-		"@types/mini-css-extract-plugin": "0.9.1",
-		"@types/script-ext-html-webpack-plugin": "2.1.1",
-		"@types/webpack-dev-server": "3.11.0",
-		"autoprefixer": "9.8.6",
-		"babel-loader": "8.1.0",
-		"css-loader": "4.2.1",
-		"cssnano": "4.1.10",
-		"fiber": "1.0.4",
-		"file-loader": "6.0.0",
-		"html-inline-css-webpack-plugin": "1.8.1",
-		"html-loader": "1.1.0",
-		"html-webpack-plugin": "4.3.0",
-		"json-loader": "0.5.7",
-		"mini-css-extract-plugin": "0.10.0",
-		"monaco-editor-webpack-plugin": "1.9.0",
-		"postcss-base64": "0.7.1",
-		"postcss-calc": "7.0.3",
-		"postcss-custom-media": "7.0.8",
-		"postcss-gap-properties": "2.0.0",
-		"postcss-loader": "3.0.0",
-		"postcss-math": "0.0.10",
-		"sass": "1.26.10",
-		"sass-loader": "9.0.3",
-		"script-ext-html-webpack-plugin": "2.1.4",
-		"style-loader": "1.2.1",
-		"svelte-loader": "2.13.6",
-		"svelte-preprocess": "4.0.12",
-		"ts-loader": "8.0.2",
-		"ttf-loader": "1.0.2",
-		"webpack": "4.44.1",
-		"webpack-cli": "3.3.12",
-		"webpack-dev-server": "3.11.0"
-	},
 	"dependencies": {
-		"@markuplint/html-parser": "1.6.0",
-		"@markuplint/html-spec": "1.7.0",
-		"@markuplint/i18n": "1.2.0",
-		"@markuplint/ml-ast": "1.6.0",
-		"@markuplint/ml-config": "1.3.0",
-		"@markuplint/ml-core": "1.8.0",
-		"@markuplint/ml-spec": "1.6.0",
-		"@markuplint/parser-utils": "1.5.0",
-		"@markuplint/rules": "1.9.0",
-		"monaco-editor": "0.20.0",
-		"svelte": "3.24.1",
-		"tslib": "2.3.0"
+		"@craco/craco": "^6.1.2",
+		"@reduxjs/toolkit": "^1.6.0",
+		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/react": "^11.1.0",
+		"@testing-library/user-event": "^12.1.10",
+		"@types/jest": "^26.0.15",
+		"@types/json-schema": "^7.0.7",
+		"@types/node": "^12.0.0",
+		"@types/react": "^17.0.0",
+		"@types/react-dom": "^17.0.0",
+		"autoprefixer": "^9",
+		"jest": "^26.6.0",
+		"monaco-editor-webpack-plugin": "^4.0.0",
+		"postcss": "^7",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-monaco-editor": "^0.43.0",
+		"react-redux": "^7.2.4",
+		"react-scripts": "4.0.3",
+		"tailwindcss": "npm:@tailwindcss/postcss7-compat",
+		"typescript": "^4.1.2",
+		"web-vitals": "^1.0.1"
+	},
+	"scripts": {
+		"start": "craco start",
+		"build": "craco build",
+		"test": "craco test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
