--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -1,9 +1,20 @@
 {
-	"extends": "../tsconfig.json",
 	"compilerOptions": {
+		"target": "es5",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": true,
+		"skipLibCheck": true,
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"noFallthroughCasesInSwitch": true,
+		"module": "esnext",
+		"moduleResolution": "node",
 		"resolveJsonModule": true,
-		"declaration": false,
-		"importHelpers": true
+		"isolatedModules": true,
+		"noEmit": true,
+		"jsx": "react-jsx"
 	},
-	"exclude": ["node_modules"]
+	"include": ["src"]
 }
