--- a/packages/@markuplint/file-resolver/tsconfig.json
+++ b/packages/@markuplint/file-resolver/tsconfig.json
@@ -7,7 +7,16 @@
 	},
 	"references": [
 		{
+			"path": "../ml-ast"
+		},
+		{
 			"path": "../ml-config"
+		},
+		{
+			"path": "../ml-core"
+		},
+		{
+			"path": "../ml-spec"
 		}
 	],
 	"include": ["./src/**/*"],
