--- a/packages/@markuplint/ml-config/package.json
+++ b/packages/@markuplint/ml-config/package.json
@@ -14,5 +14,9 @@
 	"scripts": {
 		"build": "tsc",
 		"clean": "tsc --build --clean"
+	},
+	"dependencies": {
+		"deepmerge": "^4.2.2",
+		"is-plain-object": "^5.0.0"
 	}
 }
