--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -20,6 +20,7 @@
 		"@types/cli-color": "^2.0.1",
 		"@types/has-yarn": "^1.0.1",
 		"@types/meow": "6.0.0",
+		"@types/uuid": "^8.3.1",
 		"execa": "^5.1.1"
 	},
 	"dependencies": {
@@ -33,6 +34,7 @@
 		"@markuplint/ml-spec": "^1.7.0",
 		"@markuplint/rules": "^1.10.1",
 		"cli-color": "^2.0.0",
+		"chokidar": "^3.5.2",
 		"detect-installed": "^2.0.4",
 		"eastasianwidth": "^0.2.0",
 		"enquirer": "^2.3.6",
@@ -41,6 +43,7 @@
 		"meow": "9",
 		"os-locale": "^5.0.0",
 		"strip-ansi": "6",
-		"tslib": "^2.3.0"
+		"tslib": "^2.3.0",
+		"uuid": "^8.3.2"
 	}
 }
