Tidy up the depends.

--- a/packages/@markuplint/create-rule-helper/tsconfig.json
+++ b/packages/@markuplint/create-rule-helper/tsconfig.json
@@ -3,11 +3,7 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "./lib",
-		"rootDir": "./src",
-		"paths": {
-			"@markuplint/*": ["../../../node_modules"],
-			"*": ["../../../node_modules"]
-		}
+		"rootDir": "./src"
 	},
 	"references": [
 		{
