--- a/packages/@markuplint/create-rule-helper/package.json
+++ b/packages/@markuplint/create-rule-helper/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/create-rule-helper",
-	"version": "0.1.0",
+	"version": "1.0.0-alpha.0",
 	"description": "Create rule helper",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,9 +16,8 @@
 		"dev": "tsc --build --watch",
 		"clean": "tsc --build --clean"
 	},
-	"devDependencies": {},
 	"dependencies": {
-		"@markuplint/ml-core": "^1.9.0",
+		"@markuplint/ml-core": "^2.0.0-alpha.0",
 		"mustache": "^4.2.0",
 		"prettier": "^2.4.1",
 		"tslib": "^2.3.1",
