--- a/packages/@markuplint/html-spec/package.json
+++ b/packages/@markuplint/html-spec/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/html-spec",
-	"version": "1.8.2",
+	"version": "2.0.0-alpha.0",
 	"description": "A specification of HTML Living Standard for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -24,6 +24,6 @@
 		"node-fetch": "2"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "^1.7.0"
+		"@markuplint/ml-spec": "^2.0.0-alpha.0"
 	}
 }
