--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-core",
-	"version": "1.9.0",
+	"version": "2.0.0-alpha.0",
 	"description": "The core module of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -17,16 +17,16 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/i18n": "^1.2.0",
-		"@markuplint/ml-ast": "^1.6.0",
-		"@markuplint/ml-config": "^1.3.0",
-		"@markuplint/ml-spec": "^1.7.0",
+		"@markuplint/i18n": "^2.0.0-alpha.0",
+		"@markuplint/ml-ast": "^2.0.0-alpha.0",
+		"@markuplint/ml-config": "^2.0.0-alpha.0",
+		"@markuplint/ml-spec": "^2.0.0-alpha.0",
 		"debug": "^4.3.2",
 		"postcss-selector-parser": "^6.0.6",
 		"tslib": "^2.3.1"
 	},
 	"devDependencies": {
-		"@markuplint/html-parser": "^1.7.3",
+		"@markuplint/html-parser": "^2.0.0-alpha.0",
 		"@types/debug": "^4.1.7"
 	}
 }
