--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/html-parser",
-	"version": "1.7.3",
+	"version": "2.0.0-dev.20211115.0",
 	"description": "HTML parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -20,8 +20,8 @@
 		"@types/parse5": "^6.0.2"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "^1.6.0",
-		"@markuplint/parser-utils": "^1.6.3",
+		"@markuplint/ml-ast": "^2.0.0-dev.20211115.0",
+		"@markuplint/parser-utils": "^2.0.0-dev.20211115.0",
 		"parse5": "^6.0.1",
 		"tslib": "^2.3.1"
 	}
