--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "markuplint",
-	"version": "1.11.4",
+	"version": "2.0.0-dev.20211115.0",
 	"description": "A Linter for All Markup Languages.",
 	"author": "Yusuke Hirao",
 	"license": "MIT",
@@ -25,16 +25,16 @@
 		"execa": "^5.1.1"
 	},
 	"dependencies": {
-		"@markuplint/create-rule-helper": "^0.1.0",
-		"@markuplint/file-resolver": "^1.5.0",
-		"@markuplint/html-parser": "^1.7.3",
-		"@markuplint/html-spec": "^1.8.2",
-		"@markuplint/i18n": "^1.2.0",
-		"@markuplint/ml-ast": "^1.6.0",
-		"@markuplint/ml-config": "^1.3.0",
-		"@markuplint/ml-core": "^1.9.0",
-		"@markuplint/ml-spec": "^1.7.0",
-		"@markuplint/rules": "^1.10.4",
+		"@markuplint/create-rule-helper": "^1.0.0-dev.20211115.0",
+		"@markuplint/file-resolver": "^2.0.0-dev.20211115.0",
+		"@markuplint/html-parser": "^2.0.0-dev.20211115.0",
+		"@markuplint/html-spec": "^2.0.0-dev.20211115.0",
+		"@markuplint/i18n": "^2.0.0-dev.20211115.0",
+		"@markuplint/ml-ast": "^2.0.0-dev.20211115.0",
+		"@markuplint/ml-config": "^2.0.0-dev.20211115.0",
+		"@markuplint/ml-core": "^2.0.0-dev.20211115.0",
+		"@markuplint/ml-spec": "^2.0.0-dev.20211115.0",
+		"@markuplint/rules": "^2.0.0-dev.20211115.0",
 		"chokidar": "^3.5.2",
 		"cli-color": "^2.0.1",
 		"debug": "^4.3.2",
